==> TexasInstruments/precision-adc-examples/devices/ads1258/hal.c <==
#include "hal.h"
#define SSI_PERIP (SSI3_BASE)
#define HIGH                ((bool) true)
#define LOW                 ((bool) false)

void InitGPIO(void)
{
    /* --- TODO: INSERT YOUR CODE HERE --- */
    // NOTE: Not all hardware implementations may control each of these pins...

    /* Enable the clock to the GPIO Port D and wait for it to be ready */
    MAP_SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOD);
    while(!(SysCtlPeripheralReady(SYSCTL_PERIPH_GPIOD)))
    {
    }

    /* Configure the GPIO for 'CLKSEL' as output and set low */
    MAP_GPIOPinTypeGPIOOutput(CLKSEL_PORT, CLKSEL_PIN);
    MAP_GPIOPinWrite(CLKSEL_PORT, CLKSEL_PIN, 0);

#ifdef EXAMPLE_CODE
#else
   // TODO: Enable clock on PM7?
#endif
    /* Enable the clock to the GPIO Port M and wait for it to be ready */
    MAP_SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOM);
    while(!(SysCtlPeripheralReady(SYSCTL_PERIPH_GPIOM)))
    {
    }

    MAP_SysCtlPeripheralEnable(SYSCTL_PERIPH_GPION);
    while(!(SysCtlPeripheralReady(SYSCTL_PERIPH_GPION)))
    {
    }

    /* Configure the GPIO for 'nCS' as output and set high */
    MAP_GPIOPinTypeGPIOOutput(nCS_PORT, nCS_PIN);
    MAP_GPIOPinWrite(nCS_PORT, nCS_PIN, nCS_PIN);

    /* Configure the GPIO for 'nRST_nPWDN' as output and set high */
    MAP_GPIOPinTypeGPIOOutput(nRESET_PORT, nRESET_PIN);
    MAP_GPIOPinWrite(nRESET_PORT, nRESET_PIN, nRESET_PIN);

    /* Configure the GPIO for 'nRST_nPWDN' as output and set high */
    MAP_GPIOPinTypeGPIOOutput(nPWDN_PORT, nPWDN_PIN);
    MAP_GPIOPinWrite(nPWDN_PORT, nPWDN_PIN, nPWDN_PIN);

    /* Enable the clock to the GPIO Port P and wait for it to be ready */
    //MAP_SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOP);
    //while(!(SysCtlPeripheralReady(SYSCTL_PERIPH_GPIOP)))
    //{
    //}

    /* Configure the GPIO for 'nDRDY' as input with falling edge interrupt */
    MAP_GPIOPinTypeGPIOInput(nDRDY_PORT, nDRDY_PIN);
    MAP_GPIOIntTypeSet(nDRDY_PORT, nDRDY_PIN, GPIO_FALLING_EDGE);
    MAP_GPIOIntEnable(nDRDY_PORT, nDRDY_PIN);
    MAP_IntEnable(nDRDY_INT);

    /* Enable the clock to the GPIO Port P and wait for it to be ready */
    MAP_SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOQ);
    while(!(SysCtlPeripheralReady(SYSCTL_PERIPH_GPIOQ)))
    {
    }

    /* Configure the GPIO for 'START' as output and set high */
    MAP_GPIOPinTypeGPIOOutput(START_PORT, START_PIN);
    MAP_GPIOPinWrite(START_PORT, START_PIN, START_PIN);
}

bool getSTART(void)
{
    /* --- TODO: INSERT YOUR CODE HERE --- */
    return (bool) GPIOPinRead(START_PORT, START_PIN);
}

bool getRESET(void)
{
    /* --- TODO: INSERT YOUR CODE HERE --- */
    return (bool) GPIOPinRead(nRESET_PORT, nRESET_PIN);
}

void setRESET(bool state)
{
    /* --- TODO: INSERT YOUR CODE HERE --- */
    uint8_t value = (uint8_t) (state ? nRESET_PIN : 0);
    MAP_GPIOPinWrite(nRESET_PORT, nRESET_PIN, value);
}

void setSTART(bool state)
{
    /* --- TODO: INSERT YOUR CODE HERE --- */
    uint8_t value = (uint8_t) (state ? START_PIN : 0);
    MAP_GPIOPinWrite(START_PORT, START_PIN, value);

    // Minimum START width ~4 tCLKs
    // REFERENCE: https://e2e.ti.com/support/data-converters/f/73/p/431463/1543880
    SysCtlDelay(8);
}

void toggleRESET(void)
{
    /* --- TODO: INSERT YOUR CODE HERE --- */
    MAP_GPIOPinWrite(nRESET_PORT, nRESET_PIN, 0);

    // Minimum nRESET width: 2 tCLKs
    SysCtlDelay(4);

    MAP_GPIOPinWrite(nRESET_PORT, nRESET_PIN, nRESET_PIN);
}

void InitSPI(void)
{
    /* --- TODO: INSERT YOUR CODE HERE ---
     * NOTE: The ADS1258 operates in SPI mode 0.
     */

    //
    // Enable clocks to GPIO Port A and configure pins as SSI
    //
    MAP_SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOQ);
    while(!(MAP_SysCtlPeripheralReady(SYSCTL_PERIPH_GPIOQ)))
    {
    }

    MAP_GPIOPinConfigure(GPIO_PQ0_SSI3CLK);
    //MAP_GPIOPinConfigure(GPIO_PA3_SSI0FSS); // Using GPIO for nCS instead of the FSS pin.
    MAP_GPIOPinConfigure(GPIO_PQ2_SSI3XDAT0);
    MAP_GPIOPinConfigure(GPIO_PQ3_SSI3XDAT1);
    MAP_GPIOPinTypeSSI(GPIO_PORTQ_BASE, (GPIO_PIN_0 | GPIO_PIN_2 | GPIO_PIN_3));

    //
    // Enable the clock to SSI-3 module and configure the SSI Master
    //
    MAP_SysCtlPeripheralEnable(SYSCTL_PERIPH_SSI3);
    while(!(MAP_SysCtlPeripheralReady(SYSCTL_PERIPH_SSI3)))
    {
    }

    MAP_SSIConfigSetExpClk(SSI3_BASE, getSysClockHz(), SSI_FRF_MOTO_MODE_0,
                           SSI_MODE_MASTER, (getSysClockHz()/24), 8);
    MAP_SSIEnable(SSI3_BASE);

    //
    // Flush the Receive FIFO
    //
    uint32_t junk;
    while(MAP_SSIDataGetNonBlocking(SSI3_BASE, &junk));
}

void spiSendReceiveArrays(uint8_t DataTx[], uint8_t DataRx[], uint8_t byteLength)
{
    /*  --- TODO: INSERT YOUR CODE HERE ---
     *
     *  This function should send and receive multiple bytes over the SPI.
     *
     *  A typical SPI send/receive sequence may look like the following:
     *  1) Make sure SPI receive buffer is empty
     *  2) Set the /CS pin low (if controlled by GPIO)
     *  3) Send command bytes to SPI transmit buffer
     *  4) Wait for SPI receive interrupt
     *  5) Retrieve data from SPI receive buffer
     *  6) Set the /CS pin high (if controlled by GPIO)
     *
     */

    /* Set the nCS pin LOW */
    setCS(LOW);

    /* Remove any residual or old data from the receive FIFO */
    uint32_t junk;
    while (SSIDataGetNonBlocking(SSI3_BASE, &junk));

    /* SSI TX & RX */
    uint8_t i;
    for (i = 0; i < byteLength; i++)
    {
        DataRx[i] = spiSendReceiveByte(DataTx[i]);
    }

    /* Set the nCS pin HIGH */
    setCS(HIGH);
}

uint8_t spiSendReceiveByte(uint8_t dataTx)
{
    /*  --- TODO: INSERT YOUR CODE HERE ---
     *  This function should send and receive single bytes over the SPI.
     *  NOTE: This function does not control the /CS pin to allow for
     *  more programming flexibility.
     */

    /* Remove any residual or old data from the receive FIFO */
    uint32_t junk;
    while (SSIDataGetNonBlocking(SSI3_BASE, &junk));

    /* SSI TX & RX */
    uint32_t dataRx;
    MAP_SSIDataPut(SSI_BASE_ADDR, (uint32_t) dataTx);
    MAP_SSIDataGet(SSI_BASE_ADDR, &dataRx);

    return (uint8_t) dataRx;
}
