==> TexasInstruments/precision-adc-examples/devices/ads124s08/hal.c <==
#include "hal.h"
#include "ads124s08.h"
#define SPI_SPEED 2000000
#define SPI_WORD_SIZE 8

void InitGPIO(void)
{
    /* --- INSERT YOUR CODE HERE --- */

    /* The following code is based on a TI Drivers implementation */

    /* Call driver init functions */

    /* Set the interrupt callback function */
    GPIO_setCallback(DRDY_CONST,GPIO_DRDY_IRQHandler );
}

void InitSPI(void)
{
    /* --- INSERT YOUR CODE HERE --- */

    /* The following code is based on a TI Drivers implementation for GPIO functions */

    /*
     * NOTE: The ADS124S08 operates in SPI mode 1 (CPOL = 0, CPHA = 1).
     */

    SPI_Params      spiParams;
    SPI_Params_init( &spiParams );
    spiParams.dataSize    = SPI_WORD_SIZE;
    spiParams.frameFormat = SPI_POL0_PHA1;
    spiParams.bitRate     = SPI_SPEED;
    g_SPIhandle = SPI_open( CONFIG_SPI_0, &spiParams );

    return;
}

bool getRESET( void )
{
    /* --- INSERT YOUR CODE HERE --- */

    /* The following code is based on a TI Drivers implementation */
    return (bool) GPIO_read( RESET );
}

void setRESET( bool state )
{
    /* --- INSERT YOUR CODE HERE --- */

    /* The following code is based on a TI Drivers implementation */
    GPIO_write( RESET, (unsigned int) state );
    return;
}

void toggleRESET( void )
{
    /* --- INSERT YOUR CODE HERE --- */

    /* The following code is based on a TI Drivers implementation */
    GPIO_write( RESET, (unsigned int) LOW );

    // Minimum nRESET width: 4 tCLKs = 4 * 1/4.096MHz =
    delay_us( DELAY_4TCLK );

    GPIO_write( RESET, (unsigned int) HIGH );
    return;

}

bool getSTART( void )
{
    /* --- INSERT YOUR CODE HERE --- */

    /* The following code is based on a TI Drivers implementation */
    return (bool) GPIO_read( START );
}

void setSTART( bool state )
{
    /* --- INSERT YOUR CODE HERE --- */

    /* The following code is based on a TI Drivers implementation */
    GPIO_write( START, (unsigned int) state );

    // Minimum START width: 4 tCLKs
    delay_us( DELAY_4TCLK );

    return;
}

void spiSendReceiveArrays( SPI_Handle spiHdl, uint8_t DataTx[], uint8_t DataRx[], uint8_t byteLength )
{
    /* --- INSERT YOUR CODE HERE --- */

    /* The following code is based on a TI Drivers implementation */

    SPI_Transaction spiTransaction;
    bool            transferOK;

    /*
     *  This function sends and receives multiple bytes over the SPI.
     *
     *  A typical SPI send/receive sequence may look like the following:
     *  1) Make sure SPI receive buffer is empty
     *  2) Set the /CS pin low (if controlled by GPIO)
     *  3) Send command bytes to SPI transmit buffer
     *  4) Wait for SPI receive interrupt
     *  5) Retrieve data from SPI receive buffer
     *  6) Set the /CS pin high (if controlled by GPIO)
     *
     */

    spiTransaction.txBuf = DataTx;
    spiTransaction.rxBuf = DataRx;


    setCS( LOW );

    /* Send or Receive Data */
    if ( byteLength > 0 ) {
        spiTransaction.count = byteLength;
        transferOK = SPI_transfer( spiHdl, &spiTransaction);
        if (transferOK == NULL) {
            // Display and handle error with SPI data transfer
            while (1);
        }
    }

   setCS( HIGH );
   return;
}

uint8_t spiSendReceiveByte( SPI_Handle spiHdl, uint8_t dataTx )
{
    /* --- INSERT YOUR CODE HERE --- */

    /* The following code is based on a TI Drivers implementation */

    uint8_t         dataRx = 0;
    SPI_Transaction spiTransaction;
    bool            transferOK;

    spiTransaction.count = 1;
    spiTransaction.txBuf = (void *) &dataTx;
    spiTransaction.rxBuf = (void *) &dataRx;


    setCS( LOW );

    transferOK = SPI_transfer( spiHdl, &spiTransaction);

    setCS( HIGH );

    if (transferOK == NULL) {
        // Display and handle error with SPI data transfer
        while (1);
    }
    return( dataRx );
}
